--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ footer {
     text-align: center;
     color: rgba(255, 255, 255, 0.8);
     font-size: 22px;
+    line-height: 30px;
 }
 
 .campo-letras {
