--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
 #body {
-    background-color: rgb(15, 15, 15);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    cursor: default;
+    background-color: rgb(70, 84, 88);
+    font-family: 'Architects Daughter';
 }
 
 h1 {
@@ -24,8 +26,8 @@ h1 {
 }
 
 canvas {
-    margin: 10px 0;
-    border: 1px dashed white;
+    margin: 10px auto;
+    border: 2px solid rgb(255, 172, 62);
 }
 
 .acciones {
@@ -37,22 +39,23 @@ canvas {
 
 .botones {
     display: flex;
+    justify-content: space-evenly;
 }
 
 .botones button {
-    width: 100%;
+    margin: 10px 2px;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.1);
     font-size: 20px;
     border: none;
     color: white;
-    cursor: pointer;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
 
 
-.nueva-palabra:hover {
+.nueva-palabra:hover,
+.rendirse:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -60,19 +63,16 @@ canvas {
     background-color: orange;
 }
 
-.rendirse:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
 .rendirse:active {
     background-color: rgb(200, 0, 0);
 }
 
 .keywords {
+    border: 1px solid rgb(255, 172, 62);
     text-align: center;
     padding: 4px;
-    background-color: white;
-    margin: auto;
+    background-color: rgb(43, 48, 49);
+    margin: 10px auto;
 }
 
 .keywords li {
@@ -88,25 +88,34 @@ canvas {
     cursor: pointer;
 }
 
+.intentos-restantes {
+    margin: 16px auto;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    line-height: 30px;
+    text-shadow: 0 0 10px black;
+}
+
 .palabra {
     display: flex;
     justify-content: center;
-    margin: auto auto 0 auto;
+    margin: 10px auto;
     font-size: 24px;
 }
 
 .letra {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid white;
+    color: white;
 }
 
 li:hover {
-    border-color: black;
     transform: scale(1.1);
 }
 
 li:active {
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 172, 62);
+    color: black;
 }
 
 li::selection {
@@ -114,23 +123,26 @@ li::selection {
 }
 
 footer {
-    border: 1px solid black;
-    margin: 40px auto auto auto;
-    padding: 4px;
-    background-color: black;
+    margin: auto;
+    padding: 6px;
+    background-color: rgba(0, 0, 0, 0.5);
     font-style: italic;
     color: rgb(255, 255, 255);
     text-align: center;
 }
 
-.copyright {
-    margin-top: 10px;
+.copyrigth {
+    margin-right: 16px;
+}
+
+.redes img {
+    margin: 0 4px;
 }
 
 .imgRedes {
     width: 40px;
+    vertical-align: middle;
     height: auto;
-    margin: 20px 20px 0;
     transition: 0.2s all;
     filter: invert();
 }
@@ -158,14 +170,6 @@ footer {
     pointer-events: none;
     border: 1px solid gray;
     color: gray;
-}
-
-.intentos-restantes {
-    margin: 16px 0;
-    text-align: center;
-    color: white;
-    font-size: 20px;
-    line-height: 30px;
 }
 
 .campo-letras {
